--- a/public/style.css
+++ b/public/style.css
@@ -52,6 +52,12 @@ li a:hover {
 /*--------------------------------------------------------------
 # Main
 --------------------------------------------------------------*/
+.jumbotron {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  background-color: #6fba9d;
+}
 
 .container-tiny {
 	width: 25%;
@@ -66,4 +72,37 @@ li a:hover {
   top: 8px;
   right: 16px;
   font-size: 18px;
+}
+
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+	font-size: 18px;
+}
+
+.top-center {
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.img-grow {
+  transition: all .2s ease-in-out;
+}
+
+.img-grow:hover{
+	/*
+ -moz-box-shadow:     0 2px 4px rgba(105, 130, 156, 0.22);
+ -webkit-box-shadow:  0 2px 4px rgba(105, 130, 156, 0.22);
+ box-shadow: 0 2px 4px rgba(105, 130, 156, 0.22);*/
+ transform: scale(1.1);
 }
