got ejs working

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -72,4 +72,8 @@ a list of clickable answers, a summarized total of the quote so far, current pag
 3. Results page should have a shareable link, that is built up using the decisions made by taking the quiz and the same quote value.
 
 
+
+array of questions
+
+
   -->
