got question routing working

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -49,6 +49,14 @@ li a:hover {
 .navbar-brand {
   margin-right: 0;
 }
+
+/*--------------------------------------------------------------
+# Answers
+--------------------------------------------------------------*/
+.top-buffer {
+	margin-top:90px;
+}
+
 /*--------------------------------------------------------------
 # Main
 --------------------------------------------------------------*/
@@ -89,7 +97,7 @@ li a:hover {
 
 .top-center {
   position: absolute;
-  top: 16px;
+  top: 120px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
