--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -76,4 +76,15 @@ a list of clickable answers, a summarized total of the quote so far, current pag
 array of questions
 
 
+for the legnth of answers available render those answers. for loop.
+
+ for(var i=0; i<question.answers.length; i++) {
+    <p>
+      question.answer[i].title
+    </p>
+  }
+
+get the url
+and then increment the url 
+
   -->
