--- a/views/pages/question.ejs
+++ b/views/pages/question.ejs
@@ -4,38 +4,38 @@
   <% include ../partials/head %>
 </head>
 <body onload="displayQuote()">
-  <div class="container-fluid text-center huge-top-buffer">
+  <div class="container text-center huge-top-buffer">
     <h1><%= question.title %></h1>
     <p><%= question.description %></p>
 
     <div class="row">
       <%   for(var i=0; i< question.answers.length; i++) { %>
         <div class="col-lg-4 col-md-4 col-xs-4 thumb img-grow">
-          <a onclick="increaseQuote()" class="thumbnail" id="forward" href="<%= question.href %>">
-            <input type="checkbox" id="cb3" />
-            <img class="img-responsive top-buffer img-circle" src="<%= question.answers[i].imageURL %>"  alt="" height="150" width="200">
+          <a onclick="increaseQuote(<%= question.answers[i].value %>)" class="thumbnail" id="forward" href="<%= question.href %>">
+            <img id="answerImage" class="img-responsive top-buffer img-circle" src="<%= question.answers[i].imageURL %>"  alt="" height="150" width="200">
           </a>
           <div class="bottom-center"><%= question.answers[i].title %></div>
+
         </div>
         <%   } %>
       </div>
     </div>
-    <div id = "quote" class = 'top-right'>
-      <p>
-        Quote: €0
-      </p>
+    <div class = 'top-right'>
+      <h4>
+        Quote: <span class="estimate">€</span><span id = "quote" class="estimate">0</span>
+      </h4>
     </div>
     <div class = 'top-left'>
       <a onclick="goBack()" class="giveCursor">
-        < - Previous Question
+        <h4>< - Previous Question</h4>
       </a>
     </div>
 
     <div class = 'bottom-right'>
-      <p>
+      <h4>
         Page: <%= question.pageNo %> out of 10.
-      </p>
+      </h4>
     </div>
-    <script src="../javascripts/script.js"></script>
+
   </body>
   </html>
