--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -61,9 +61,18 @@ li a:hover {
 	margin-top:200px;
 }
 
+
+
 /*--------------------------------------------------------------
 # Main
 --------------------------------------------------------------*/
+ul { display:table; margin:0 auto;}
+
+.anim{
+	-webkit-animation-delay: 0.3s;
+	-moz-animation-delay: 0.3s;
+	animation-delay: 0.3s;
+}
 
 .offset-3{
 	margin-left: 25%;
@@ -82,6 +91,14 @@ li a:hover {
 
 .container-tiny {
 	width: 25%;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.container-fixed{
+	width: 100%;
 	padding-right: 15px;
 	padding-left: 15px;
 	margin-right: auto;
