--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,21 @@
       <p>Have you ever wondered how much it would cost to make a website? This handy app cost calculator will help you: Find out how much your website will cost in under a minute!</p>
       <button id ="startBtn" onclick="startQuiz()" type="button" class="btn btn-lg btn--light btnFillup anglebg">Get Started</button>
     </div>
+
+    <div class = 'top-right'>
+            <div class="social-buttons hidden-xs">
+  					<!-- Facebook Share Button -->
+  					<div class="fb-share-button" data-href="http://howmuchdoesawebsiteco.st" data-layout="button"></div>
+  					<!-- Twitter Tweet Button -->
+  					<a href="https://twitter.com/share" class="twitter-share-button" data-text="How much does it cost to make a website? Find out in less than a minute. –" data-count="none"></a>
+  					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  				</div>
+    </div>
+
+
+
   </div>
+    <% include ../partials/footer %>
 </body>
 </html>
 <!--
