--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -61,6 +61,14 @@ li a:hover {
 	margin-top:200px;
 }
 
+.bottom-buffer {
+	margin-bottom:90px;
+}
+
+.huge-bottom-buffer {
+	margin-bottom:200px;
+}
+
 
 
 /*--------------------------------------------------------------
@@ -128,9 +136,9 @@ ul { display:table; margin:0 auto;}
 }
 
 .bottom-right {
-  position: absolute;
-  bottom: 8px;
-  right: 16px;
+	position: fixed;
+    bottom: 0;
+    right: 0;
 }
 
 
@@ -267,7 +275,9 @@ p {
 
 @media (min-width: 768px) {
   .container--content {
-    width: 750px; } }
+    width: 750px; }
+
+		 }
 
 @media (min-width: 992px) {
   .container--content {
@@ -1379,29 +1389,61 @@ input:-webkit-autofill:focus {
 /*--------------------------------------------------------------
 # Media Query
 --------------------------------------------------------------*/
+@media (min-width: 1px) {
+	h4 {
+		 font-size: 1.1rem;
+	 }
+}
 
-	@media (min-width: 750px) {
+@media (min-width: 400px) {
+	h4 {
+		 font-size: 1.8rem;
+	 }
+}
+
+
+
+	@media (min-width: 768px) {
+		h4 {
+			 font-size: 2.0rem;
+		 }
 		.container-fluid {
-			width: 50%;
+			width: 90%;
 		}
 		.container {
 			width: 90%;
 		}
 	}
 
-	@media (min-width: 1000px) {
+	@media (min-width: 1024px) {
+		.container-fluid {
+			width: 70%;
+		}
 		.container {
 			width: 70%;
 		}
 	}
 
-	@media (min-width: 1350px) {
-		.container {
-			width: 50%;
+	@media (min-width: 1025px) {
+		.container-fluid {
+			width: 70%;
 		}
 	}
 
+	@media (min-width: 1350px) {
+		.container-fluid {
+			width: 60%;
+		}
+		.container {
+			width: 50%;
+		}
+
+	}
+
 	@media (min-width: 1650px) {
+		.container-fluid {
+			width: 50%;
+		}
 		.container {
 			width: 40%;
 		}
