--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,8 +3,15 @@
 
 <link rel="icon" href="">
 
+<!-- JavaScriptp -->
+<script src="/javascripts/test.js"></script>
 <script src="/javascripts/script.js"></script>
 <script src="/javascripts/wow.min.js"></script>
+
+<!-- Jquery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Wow -->
 <script>
 new WOW().init();
 </script>
