--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,3 +13,4 @@
 <link rel="stylesheet" href="/stylesheets/css/style.css"></link>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
